--- a/web/pom.xml
+++ b/web/pom.xml
@@ -37,6 +37,11 @@
         <artifactId>servlet-api</artifactId>
         <version>2.5</version>
     </dependency>
+    <dependency>
+      <groupId>com.anphoenix</groupId>
+      <artifactId>data_model</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>phoenix</finalName>
